# LuaBitOp

./: .gitattributes  .gitignore  .travis.yml  Makefile.am  Makefile.in  aclocal.m4  bit.c  bit.h  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml  luabitop.yml
Testing/Temporary/: .gitignore
build-aux/: .gitignore
m4/: .gitattributes  .gitignore
